package seedu.address.logic.commands;

import static java.util.Objects.requireNonNull;

import java.util.Objects;

import seedu.address.commons.util.ToStringBuilder;

/**
 * Represents the result of a command execution.
 */
public class CommandResult {

    private final String feedbackToUser;
    private final String popupDisplay;

    /** Help information should be shown to the user. */
    private final boolean showHelp;

    /** Summary statistics should be shown to the user. */
    private final boolean showSummaryStats;
    /** Student details should be shown to the user. */
    private final boolean showStudentDetails;

    /** The application should exit. */
    private final boolean exit;

    /**
     * Constructs a {@code CommandResult} with the specified fields.
     */
    public CommandResult(String feedbackToUser, String popupDisplay, boolean showHelp,
                         boolean exit, boolean showSummaryStats, boolean showStudentDetails) {
        this.feedbackToUser = requireNonNull(feedbackToUser);
        this.popupDisplay = popupDisplay;
        this.showHelp = showHelp;
        this.exit = exit;
        this.showSummaryStats = showSummaryStats;
        this.showStudentDetails = showStudentDetails;
    }

    /**
     * Constructs a {@code CommandResult} with the specified {@code feedbackToUser},
     * and other fields set to their default value.
     */
    public CommandResult(String feedbackToUser) {
        this(feedbackToUser, null, false, false, false, false);
    }

    public String getFeedbackToUser() {
        return feedbackToUser;
    }
    public String getPopupDisplay() {
        return popupDisplay;
    }

    public boolean isShowHelp() {
        return showHelp;
    }

    public boolean isExit() {
        return exit;
    }

    public boolean isShowSummaryStats() {
        return showSummaryStats;
    }

    public boolean isShowStudentDetails() {
        return showStudentDetails;
    }

    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        // instanceof handles nulls
        if (!(other instanceof CommandResult)) {
            return false;
        }

        CommandResult otherCommandResult = (CommandResult) other;
        return feedbackToUser.equals(otherCommandResult.feedbackToUser)
                && showHelp == otherCommandResult.showHelp
                && exit == otherCommandResult.exit;
    }

    @Override
    public int hashCode() {
        return Objects.hash(feedbackToUser, showHelp, exit);
    }

    @Override
    public String toString() {
        return new ToStringBuilder(this)
                .add("feedbackToUser", feedbackToUser)
                .add("showHelp", showHelp)
                .add("exit", exit)
                .toString();
    }

}
